// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test cliParser should error on missing project name: missing-project-name-stdout 1`] = `
"  console.error
    jest.js <projectName>
    
    project name
    
    Positionals:
      projectName                                                           [string]
    
    Options:
      -v, --verbose       print additional logs                            [boolean]
      -i, --interactive   interactive mode                                 [boolean]
      -t, --typescript    use typescript                   [boolean] [default: true]
      -h, --husky         install husky pre-commit hook for building launcher
                                                           [boolean] [default: true]
      -s, --skip-install  write dependencies to package.json without installing
                                                                           [boolean]
      -c, --icon          override default launcher icon file               [string]
      -n, --node-version  override node version to bundle                   [string]
          --version       Show version number                              [boolean]
          --help          Show help                                        [boolean]

      at error (node_modules/yargs/build/index.cjs:1:41250)
      at Object.i.showHelp (node_modules/yargs/build/index.cjs:1:19216)
      at Bt.showHelp (node_modules/yargs/build/index.cjs:1:38640)
      at Object.i.fail (node_modules/yargs/build/index.cjs:1:13016)
      at Object.positionalCount (node_modules/yargs/build/index.cjs:1:47357)
      at _.populatePositionals (node_modules/yargs/build/index.cjs:1:9495)
      at _.applyMiddlewareAndGetResult (node_modules/yargs/build/index.cjs:1:8586)

"
`;

exports[`Test cliParser should print help with flags: --help: help-stdout 1`] = `
"  console.log
    jest.js <projectName>
    
    project name
    
    Positionals:
      projectName  project name                                             [string]
    
    Options:
      -v, --verbose       print additional logs                            [boolean]
      -i, --interactive   interactive mode                                 [boolean]
      -t, --typescript    use typescript                   [boolean] [default: true]
      -h, --husky         install husky pre-commit hook for building launcher
                                                           [boolean] [default: true]
      -s, --skip-install  write dependencies to package.json without installing
                                                                           [boolean]
      -c, --icon          override default launcher icon file               [string]
      -n, --node-version  override node version to bundle                   [string]
          --version       Show version number                              [boolean]
          --help          Show help                                        [boolean]

      at log (node_modules/yargs/build/index.cjs:1:41116)

"
`;
